[B]Version 1.1.37[/B]
- XNXX Fix pagination beyond page 8
- XNXX Fix listing error
